# Hang

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build.bat  render.yaml  run_client.bat  run_server.bat
.github/workflows/: release.yml
client/: Cargo.toml  build.rs
client/src/: constants.rs  invite.rs  ipc.rs  main.rs  player.rs  protocol.rs  sync.rs  ui.rs  update.rs  utils.rs  youtube.rs
docs/: invite-links-plan.md
installer/: build_installer.ps1  hang-client.wxs  license.rtf  prepare_payload.ps1
server/: Cargo.toml
server/src/: main.rs  protocol.rs  state.rs
server/static/: index.html  thank-you.html
