[package]
name = "hang-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
libloading = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
