[package]
name = "hang-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
libloading = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
url = "2.5"
urlencoding = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
directories = "5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
